--- a/index.style.css
+++ b/index.style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgba(255,255,255,0.3);
+    font-family: Consolas,monaco,monospace;
 }
  a {
  	text-decoration: none;
@@ -35,13 +36,17 @@ body {
 
 }
 .logo {
-	background-color:rgba(255,255,255,0.7);
-	border: 1px solid black;
+	background-color: transparent;
+	/*border: 1px solid black;*/
 	overflow:hidden;
 	position:absolute;
 	width: 500px ;
-	height: 90%;
+	height: 50%;
 	left:0;
+	font-size:20px;
+	letter-spacing: 3em;
+	text-align: center;
+	margin-top:20px;
 
 }
 
