--- a/index.style.css
+++ b/index.style.css
@@ -17,7 +17,7 @@ body {
     display:block;    
 }
 .banner {
-	background-color: rgba(225,220,220,1);
+	background-color: rgba(220,225,220,1);
 	width:100%;
 	overflow:hidden;
 	height:150px;
@@ -95,7 +95,7 @@ body {
 .menu-button {
 	height:40px;
 	font-size: 25px;
-	background-color:rgba(255,255,255,0.7);
+	/*background-color:rgba(255,255,255,0.7);*/
 	border-width: 0.5px;
 	border: 1px solid;
 	border-color: black;
@@ -110,9 +110,10 @@ body {
 	position: absolute;
 	width:100%;
 	height:1500px;
-	margin-top:140px;
+	margin-top:160px;
 	z-index: 9;
-	background-color: rgba(240,240,240,0.7);
+	border: solid 1px black;
+	background-color: rgba(250,250,250,0.7);
 }
 
 .content img {
@@ -125,13 +126,13 @@ body {
 .r {
 	display: block;
 	position: relative;
-	margin-top: 10px;
+	margin-top: 4px;
 }
 
 .c {
 	width:30%;
 	position:absolute;
-	margin-top:5%;
+	margin-top:10px;
 }
 
 #c1 {
