--- a/index.style.css
+++ b/index.style.css
@@ -1,6 +1,7 @@
 body {
-    background-color: rgba(255,255,255,0.3);
     font-family: Consolas,monaco,monospace;
+    margin:0 auto;
+    height:100%;
 }
  a {
  	text-decoration: none;
@@ -12,12 +13,13 @@ body {
  }
 .wrapper {
    	width:97.5%;
+   	height:1200px;
     margin: 0 auto;
     position: relative;
     display:block;    
 }
 .banner {
-	background-color: rgba(220,225,220,1);
+	background-color: rgba(51,47,48,1);
 	width:100%;
 	overflow:hidden;
 	height:150px;
@@ -25,6 +27,7 @@ body {
 	top:0%;
 	left:0%;
 	z-index:10;
+	border-bottom:2px solid white;
 }
 .banner-container {
 	position:absolute;
@@ -108,12 +111,13 @@ body {
 
 .content {
 	position: absolute;
-	width:100%;
-	height:1500px;
+	width:80%;
 	margin-top:160px;
+	margin-right:10%;
+	margin-left: 10%;
+	text-align: center;
 	z-index: 9;
-	border: solid 1px black;
-	background-color: rgba(250,250,250,0.7);
+	padding-bottom:100px;
 }
 
 .content img {
@@ -126,7 +130,7 @@ body {
 .r {
 	display: block;
 	position: relative;
-	margin-top: 4px;
+	margin-top: 10px;
 }
 
 .c {
@@ -154,6 +158,19 @@ body {
 	width: 100%;
 	position:absolute;
 	display:none;
+}
+
+/* footer*/
+
+.footer {
+	width:100%;
+	position: absolute;
+	background-color: ;
+	height:100px;
+	bottom:0;
+	display: block;
+	z-index: 10;
+	border-top: 1px solid black;
 }
 
 /* scrollbar and max width  */
